--- a/src/assets/css/PricingTable.scss
+++ b/src/assets/css/PricingTable.scss
@@ -53,7 +53,7 @@
     padding: 15px 25px;
     position: relative;
     width: 100%;
-    z-index: 10;
+    z-index: 2;
     box-shadow: 0px 10px 13px -6px rgba(0, 0, 0, 0.08), 0px 20px 31px 3px rgba(0, 0, 0, 0.09), 0px 8px 20px 7px rgba(0, 0, 0, 0.02);
     padding-bottom: 50px;
   }
